--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Libertarians</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="bootstrap.css">
-    <link rel="icon" href="Images/Screenshot 2022-04-19 221729.png" type="image/png">
+    <link rel="icon" href="Images/grid2-1507503953598.png" type="image/png">
 </head>
 <body style="background-color: #E70000;">
     <header class="border row">
-        <h2 class="border border-light bg-light text-danger p-2 mb-0 col-12">Libertarians &#62; <sup>&#9734;</sup></h2>
+        <h2 class="border border-light bg-light text-danger p-2 mb-0 col-12 mx-2">Libertarians &#62; <sup>&#9734;</sup></h2>
     </header>
 
     <section class="border border-warning row justify-content-around border-3 pt-4 p-3" style="background-color: #E70000;">
